--- a/index.html
+++ b/index.html
@@ -35,11 +35,17 @@
             <h3>Visualização da Página (Para fins de depuração de OCR)</h3>
             <canvas id="pdfCanvas"></canvas>
         </div>
+        <button id="analyzeButton" disabled>Analisar Conteúdo com IA</button>
+        <div class="content-display" style="margin-top: 20px;">
+            <h2>Análise da IA:</h2>
+            <pre id="aiOutput">Aguardando texto para análise...</pre>
+        </div>
     </div>
 
     <script src="script.js" type="module"></script>
 </body>
 
 </html>
+
 
 
